[tool.poetry]
name = "pycron"
version = "1.0"
description = "The quick and simple editor for cron schedule expressions"
authors = ["Henrique Leal <hm.leal@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
pycron = "pycron.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
